gccida/g1/biv_total_increment
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2924:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2924:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rbx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2928:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2929:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2933:19: error: use of undeclared identifier 'biv'
v4 = *( ( _BYTE *)biv + 100); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2936:6: error: use of undeclared identifier 'biv'
if ( biv->mult_val != const_int_rtx[65] ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2940:48: error: use of undeclared identifier 'biv'
v2 = fold_rtx_mult_add( v2, const_int_rtx[65], biv->add_val, biv->mode); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2940:62: error: use of undeclared identifier 'biv'
v2 = fold_rtx_mult_add( v2, const_int_rtx[65], biv->add_val, biv->mode); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2941:1: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2941:7: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/unroll.c:2942:7: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( !biv ) 
      ^~~
      div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/biv_total_increment/src/obj/unroll.o] Error 1
